unpackaged/main/default/objects/Media_Targeting_Widget_Settings__c/Media_Targeting_Widget_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Media Targeting Widget Settings</label>
</CustomObject>