unpackaged/main/default/objects/Media_Targeting_Widget_Settings__c/fields/Audience_Segment_Label__c.field-meta.xml
<CustomField>
    <fullName>Audience_Segment_Label__c</fullName>
    <label>Audience Segment Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>