unpackaged/main/default/objects/Media_Targeting_Widget_Settings__c/fields/Default_Ad_Server_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Ad_Server_Id__c</fullName>
    <label>Default Ad Server Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>