unpackaged/main/default/objects/Media_Targeting_Widget_Settings__c/fields/Show_Audience_Segment__c.field-meta.xml
<CustomField>
    <fullName>Show_Audience_Segment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Audience Segment</label>
    <type>Checkbox</type>
</CustomField>