unpackaged/main/default/objects/Media_Targeting_Widget_Settings__c/fields/Show_KeyValue_Ids_Instead_Of_Names__c.field-meta.xml
<CustomField>
    <fullName>Show_KeyValue_Ids_Instead_Of_Names__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show KeyValue Ids Instead Of Names</label>
    <type>Checkbox</type>
</CustomField>