unpackaged/main/default/objects/Media_Targeting_Widget_Settings__c/fields/Video_Settings_Ad_Pod_Position__c.field-meta.xml
<CustomField>
    <fullName>Video_Settings_Ad_Pod_Position__c</fullName>
    <label>Video Settings Ad Pod Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>