unpackaged/main/default/objects/Media_Targeting_Widget_Settings__c/fields/Video_Settings_Available_Mid_Roll_AdPods__c.field-meta.xml
<CustomField>
    <fullName>Video_Settings_Available_Mid_Roll_AdPods__c</fullName>
    <label>Video Settings Available Mid-Roll AdPods</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>